// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> should render a default image 1`] = `
<styled.img
  alt="Some alt text"
  src="A source string"
/>
`;

exports[`<Image /> should render a full image 1`] = `
<styled.img
  alt="Some alt text"
  size="full"
  src="A source string"
/>
`;

exports[`<Image /> should render a large image 1`] = `
<styled.img
  alt="Some alt text"
  size="large"
  src="A source string"
/>
`;

exports[`<Image /> should render a medium image 1`] = `
<styled.img
  alt="Some alt text"
  size="medium"
  src="A source string"
/>
`;

exports[`<Image /> should render a small image 1`] = `
<styled.img
  alt="Some alt text"
  size="small"
  src="A source string"
/>
`;

exports[`<Image /> should render a thumbnail image 1`] = `
<styled.img
  alt="Some alt text"
  size="thumb"
  src="A source string"
/>
`;

exports[`<Image /> should render a xlarge image 1`] = `
<styled.img
  alt="Some alt text"
  size="xlarge"
  src="A source string"
/>
`;

exports[`<Image /> should render a xsmall image 1`] = `
<styled.img
  alt="Some alt text"
  size="xsmall"
  src="A source string"
/>
`;

exports[`<Image /> should render a xxsmall image 1`] = `
<styled.img
  alt="Some alt text"
  size="xxsmall"
  src="A source string"
/>
`;
